# hic200-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: aggregate.hpp  bin_def.hpp  common.hpp  gz_reader.hpp  read_and_dump.hpp
src/: aggregate.cpp  bin_def.cpp  common.cpp  gz_reader.cpp  main_dump_to_sort.cpp  main_hic200.cpp  main_make_bin_def.cpp  main_read_and_dump.cpp  read_and_dump.cpp
